Dropdown menu list is displayed in top left corner instead of below list widget
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr102 | --- | unaffected |
| firefox111 | --- | unaffected |
| firefox112 | --- | unaffected |
| firefox113 | --- | fixed |
People
(Reporter: fredbezies, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
This is a bug introduced in March 17th, 2023 firefox nightly.
If you have a webpage with a dropdown menu widget, when you click on it to list every available option, list is displayed in the top left corner instead of below widget.
I added a picture to show this weird bug.
I'm using Archlinux + Gnome.
| Reporter | ||
Comment 1•3 years ago
•
|
||
Using mozregression-gui, I found that the last working commit was 526b311a and first broken one was c15f0fb1.
A regression related to fix for bug 1809084 ?!
Updated•3 years ago
|
Comment 3•3 years ago
|
||
Set release status flags based on info from the regressing bug 1809084
| Assignee | ||
Updated•3 years ago
|
| Assignee | ||
Comment 4•3 years ago
|
||
I missed setting mUntransformedAnchorRect in one case, causing Wayland
popups to be wrongly positioned.
| Assignee | ||
Comment 5•3 years ago
|
||
I'm going to land it since it's effectively a one-liner for a non-tested (on trunk) configuration, and it's a rather annoying bug. But Martin and/or David, if you can take a look it'd be appreciated. :)
| Reporter | ||
Comment 7•3 years ago
|
||
It is still broken for Other Bookmarks dropdown list and for printer selection when you want to print a web page.
| Assignee | ||
Comment 8•3 years ago
|
||
Well the patch hasn't made it to central yet so latest nightly still has the bug.
Comment 9•3 years ago
|
||
| bugherder | ||
Updated•3 years ago
|
Description
•