Bug 1823020 - Set mUntransformedAnchorRect for rect-anchored popups.

I missed setting mUntransformedAnchorRect in one case, causing Wayland
popups to be wrongly positioned.

Differential Revision: https://phabricator.services.mozilla.com/D172886